# arctis-battery-indicator

./: .gitignore  .gitmodules  Cargo.toml  Install.ps1  LICENSE  README.md  build.rs  cleanup.patch  example-arctis9.config.toml  example.config.toml  installer.iss
.github/workflows/: release.yml
locales/: app.yml
src/: config.rs  config_file.rs  headphone_models.rs  headset_control.rs  hid.rs  icon.rs  lang.rs  lib.rs  main.rs  menu.rs
src/bat/: GenerateIcons.ps1
