[package]
name = "arctis-battery-indicator"
version = "1.5.4"
edition = "2021"
authors = ["Aaro Luomanen"]
description = "Battery icon for the SteelSeries Arctis headset."
license = "MIT"
homepage = "https://github.com/aarol/"
default-run = "arctis-battery-indicator-debug"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "arctis-battery-indicator-debug"
path = "src/bin/debug.rs"

[dependencies]
anyhow = "1.0.94"
dirs = "5.0.1"
hidapi = "2.6.3"
image = { version = "0.25.2", default-features = false, features = ["png"] }
log = "0.4.22"
rust-i18n = "3.1.2"
simplelog = { version = "0.12.2", features = ["paris"] }
sys-locale = "0.3.2"
tray-icon = "0.19.2"
winit = "0.30.5"

[profile.release]
opt-level = "z"
lto = true
