[package]
name = "arctis-battery-indicator"
version = "2.1.4"
edition = "2024"
authors = ["Aaro Luomanen"]
description = "Program that displays a battery icon for the SteelSeries Arctis headset."
license = "MIT"
homepage = "https://github.com/aarol/"
default-run = "arctis-battery-indicator-debug"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "arctis-battery-indicator-debug"
path = "src/bin/debug.rs"

[dependencies]
anyhow = "1.0.99"
dirs = "6.0.0"
hidapi = "2.6.3"
log = "0.4.22"
serde = "1.0.219"
simplelog = { version = "0.12.2", features = ["paris"] }
sys-locale = "0.3.2"
toml = "0.9.5"
tray-icon = "0.21.1"
winit = "0.30.12"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
